Added DB2 data test

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,19 @@ spring:
       host: localhost
       port: 6379
       database: 0
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
+    database: db2
+    hibernate:
+      ddl-auto: create-drop
+    generate-ddl: true
+    show-sql: true
+  datasource:
+    url: jdbc:db2://localhost:50000/testdb
+    username: db2inst1
+    password: abc123
 server:
   port: 8280
   servlet:
